[tool.poetry]
name = "running-normalization"
version = "0.1.0"
description = ""
authors = ["bvlaming <basvlaming@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
